# SupercapacitorBMS

./: CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.backup  LICENSE  README_BMS_DISPLAY.md  package.xml
bms_can_bridge_cpp/: CMakeLists.txt
config/: CMakeLists.txt  README.md  package.xml
config/config/: foxglove_layout.json  rviz_bms.rviz
config/launch/: bms_can_bridge.launch.py
config/src/: decoder_node.cpp  fake_can_pub.cpp
install/: local_setup.sh  setup.sh
install/bms_can_bridge_cpp/share/bms_can_bridge_cpp/: package.bash  package.zsh
launch/: bms_display.launch.py  bms_fake_and_decode.launch.py  bms_with_foxglove.launch.py  demo_fake.launch.py
log/: latest_build
scripts/: preview_ui.py  quick_start.sh  virtual_display.py  virtual_hdmi_display.sh
src/: bms_display_main.cpp  bms_display_simple.cpp  bms_display_ui.cpp  bms_display_ui.h  bms_state_node.cpp  fake_can_pub.cpp  simple_test.cpp
