<?xml version="1.0"?>
<package format="3">
  <name>bms_can_bridge_cpp</name>
  <version>0.1.0</version>
  <description>Full BMS CAN→ROS 2 Humble bridge in C++: decodes all custom frames and provides RViz/Foxglove configs.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>can_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>ros2_socketcan</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export/>
</package>
